# mcp-obsidian

./: pyproject.toml
docs/superpowers/specs/: 2026-04-07-knowledge-base-mcp-design.md
src/mcp_obsidian/: fetcher.py  kb_tools.py  obsidian.py  server.py  vault_utils.py
tests/: test_fetcher.py  test_kb_tools.py  test_vault_utils.py
